# email.dtek.se

./: README.md  default.nix  email-dtek-se.cabal  stack.yaml
app/: Main.hs
scripts/: create-db.sql
src/: Alias.hs  Db.hs
