name:                email-dtek-se
version:             0.0.0.1
homepage:            https://github.com/dtekcth/email.dtek.se
license:             AGPL-3
license-file:        LICENSE
author:              Andreas Ekeroot, Jacob Jonsson
maintainer:          dhack@dtek.se
copyright:           2017 Andreas Ekeroot, Jacob Jonsson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable email-dtek-se-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , email-dtek-se
  default-language:    Haskell2010

test-suite email-dtek-se-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , email-dtek-se
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dtekcth/email.dtek.se
