name:                email-dtek-se
version:             0.0.0.1
homepage:            https://github.com/dtekcth/email.dtek.se
license:             AGPL-3
license-file:        LICENSE
author:              Andreas Ekeroot, Jacob Jonsson
maintainer:          dhack@dtek.se
copyright:           2017 Andreas Ekeroot, Jacob Jonsson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       digestive-functors >= 0.8.2.0,
                       digestive-functors-lucid >= 0.0.0.5,
                       lucid >= 2.9.8.1,
                       mysql-simple >= 0.4.2,
                       scotty >= 0.11.0,
                       text >= 1.2.2.2
  default-language:    Haskell2010

executable email-dtek-se-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , email-dtek-se
                     , mysql-simple
                     , scotty
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dtekcth/email.dtek.se
